--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,10 @@
 ﻿name: MyST GitHub Pages Deploy
 on:
   push:
-    branches: [ main ]
+    branches: [main]
 
 env:
-  BASE_URL: /
+  BASE_URL: / # custom domain → root
 
 permissions:
   contents: read
@@ -31,9 +31,10 @@ jobs:
         run: npm install -g mystmd
       - name: Build site
         run: myst build --html
-      # Optional: also ship CNAME (you may omit if Pages settings already has your custom domain)
-      - name: Write CNAME
-        run: echo "soft-robots.com" > _build/html/CNAME
+      - name: Ensure .nojekyll and CNAME
+        run: |
+          touch _build/html/.nojekyll
+          echo "soft-robots.com" > _build/html/CNAME
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
